# adafruit-feather-nRF52840-sense

./: README.md
c_platform-io/include/: sensors.h  sensors_snapshot.h
c_platform-io/lib/Adafruit_BMP280/: Adafruit_BMP280.cpp
c_platform-io/src/: main.cpp
include/: main.h  sensors.h  sensors_snapshot.h
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: main.rs
src/: main.cpp
